--- a/index.html
+++ b/index.html
@@ -1,24 +1,23 @@
 ---
 layout: workshop
 root: .
-venue: FIXME (brief name of host site)
-address: FIXME (street address of home location)
-country: FIXME (country (hyphenated if need be, like 'United-Kingdom')
-language: FIXME (language code like 'en' or 'fr')
+venue: RDAP16
+address: Omni Atlanta Hotel at CNN Center, Atlanta, GA
+country: United-States
+language: en
 latlng: (fractional latitude and longitude like 41.7901128,-87.6007318)
-humandate: FIXME (use the format 'Feb 17-18, 2020' (without the quotes)
-humantime: FIXME (use the format '9:00 am - 4:30 pm' (without the quotes)
-startdate: FIXME (use YYYY-MM-DD format like 2015-01-01)
-enddate: FIXME (use YYYY-MM-DD format like 2015-01-02)
-instructor: (list of names like ["Kay McNulty", "Betty Jennings", "Betty Snyder"])
-helper: (list of names like ["Marlyn Wescoff", "Fran Bilas", "Ruth Lichterman"])
-contact: FIXME (contact email address for workshop organizer)
-etherpad: # FIXME (insert the URL for your Etherpad if you're using one)
-eventbrite: # FIXME (delete this if not used, otherwise uncomment and provide 1234567890AB key for Eventbrite registration)
+humandate: May 6-7, 2016
+humantime: 9:00 am - 4:30 pm
+startdate: 2016-05-06
+enddate: 2016-05-06
+instructor: ["Sherry Lake", "Steve Van Tuyl"]
+helper: []
+contact: steve.vantuyl@oregonstate.edu
+etherpad: https://public.etherpad-mozilla.org/p/RDAP16-DataCarpentry
 day1_am: "Data organization in spreadsheets and OpenRefine"
 day1_pm: "Introduction to R"
-day2_am: "Data analysis and visualization in R"
-day2_pm: "SQL for data management"
+day2_am: "SQL for data management"
+day2_pm: "Data analysis and visualization in R"
 ---
 <!--
   HEADER
