--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ venue: RDAP16
 address: Omni Atlanta Hotel at CNN Center, Atlanta, GA
 country: United-States
 language: en
-latlng: (fractional latitude and longitude like 41.7901128,-87.6007318)
+latlng: 33.7591465,-84.3950201
 humandate: May 6-7, 2016
 humantime: 8:30 am - 4:30 pm
 startdate: 2016-05-06
