--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ humantime: 8:30 am - 4:30 pm
 startdate: 2016-05-06
 enddate: 2016-05-06
 instructor: ["Sherry Lake", "Steve Van Tuyl"]
-helper: []
+helper: ["Tim Norris", "Susan Parham"]
 contact: steve.vantuyl@oregonstate.edu
 etherpad: https://public.etherpad-mozilla.org/p/RDAP16-DataCarpentry
 day1_am: "Data organization in spreadsheets and OpenRefine"
